--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,53 +1,122 @@
-#container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+.App {
+  text-align: center;
 }
 
-#nav-box {
-  width: 20%;
-  /* border: 1px solid; */
-  height: 100vh;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-@media (min-width: 200px) and (max-width: 499px) {
-  #container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-
-  #nav-box {
-    display: none;
-  }
+.App-link {
+  color: #61dafb;
 }
 
-@media screen and (min-width: 500px) and (max-width: 1005px) {
-  #container {
-    width: 85%;
-    display: flex;
-    justify-content: center;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-
-  #nav-box {
-    width: 15%;
-    justify-content: center;
+  to {
+    transform: rotate(360deg);
   }
 }
 
-@media screen and (min-width: 1005px) and (max-width: 1281px){
-  #container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
+/* CSS */
+.button-36 {
+  margin: 10px;
+  background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  height: 3rem;
+  padding: 0 1rem;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all .5s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
 
-  #nav-box {
-    width: 8%;
-    justify-content: center;
+.button-36:hover {
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+  transition-duration: .1s;
+}
+
+@media (min-width: 768px) {
+  .button-36 {
+    padding: 0 2.6rem;
   }
+}
+
+/* CSS */
+.button-23 p{
+  padding: 0px;
+  margin: 0px;
+}
+.button-23 {
+  background-color: #FFFFFF;
+  border: 1px solid #222222;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #222222;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 10px;
+  outline: none;
+  padding: 0px 20px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  touch-action: manipulation;
+  justify-content: center;
+  align-items: center;
+  transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+  user-select: none;
+  -webkit-user-select: none;
+  width: auto;
+}
+
+.button-23:focus-visible {
+  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+  transition: box-shadow .2s;
+}
+
+.button-23:active {
+  background-color: #F7F7F7;
+  border-color: #000000;
+  transform: scale(.96);
+}
+
+.button-23:disabled {
+  border-color: #DDDDDD;
+  color: #DDDDDD;
+  cursor: not-allowed;
+  opacity: 1;
 }
