--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,42 +1,56 @@
-.App {
-  text-align: center;
+#container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#nav-box {
+  width: 20%;
+  /* border: 1px solid; */
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-start;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 200px) and (max-width: 499px) {
+  #container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  #nav-box {
+    display: none;
   }
 }
 
+@media screen and (min-width: 500px) and (max-width: 1005px) {
+  #container {
+    width: 85%;
+    display: flex;
+    justify-content: center;
+  }
+
+  #nav-box {
+    width: 15%;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1005px) and (max-width: 1281px){
+  #container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  #nav-box {
+    width: 8%;
+    justify-content: center;
+  }
+}
 /* CSS */
 .button-36 {
   margin: 10px;
